# telether

./: .gitignore  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  attach.bat  attach.py  autostart-off.bat  autostart-on.bat  bridge.py  config.example.json  install.bat  pyproject.toml  requirements.txt  start-silent.bat  start.bat  strings.py  tray.pyw
docs/screenshots/: README.md
